Techudaipur first commit
Techudaipur first commit

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -10,7 +10,7 @@
 
     .cat p {
 
-background-color: rgba(0,0,0,0.7);
+background-color: rgba(0,0,0,0.8);
     color: #fff;
     width: 100%;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
@@ -35,7 +35,7 @@ background-color: rgba(0,0,0,0.7);
 
     .swiper-slide {
 
-       height: 150px;
+       height: 180px;
     font-size: 31px;
     text-align: center;
     line-height: 113px;
@@ -100,16 +100,35 @@ background-color: rgba(0,0,0,0.7);
     }
 
     .leftarrow {
-        position:absolute;
-        z-index:100;
+      position: absolute;
+    z-index: 100;
+    background: #fff !important;
+    border-radius: 100% !important;
+    padding-top: 13px;
+    padding-bottom: 12px;
+    margin-top:-2px;
     }
 
     
 
     .mytextbox {
-        width:100%;
-        padding-top:7px;
-        padding-bottom:7px;
+       width: 100%;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    background: transparent !important;
+    border: none !important;
+    border-bottom: 2px solid #fff !important;
+    box-shadow:none !important;
+    color   :#fff;
+    font-size:16px;
+    }
+
+    mytextbox:focus {
+          background: transparent;
+    border: none;
+    border-bottom: 2px solid #fff;
+      box-shadow:none !important;
+
     }
 
    .searcharea {
@@ -117,7 +136,7 @@ background-color: rgba(0,0,0,0.7);
     width: 100%;
     top: 0px;
     height: 56px;
-    background: #eee;
+   
     z-index: 10;
     padding-left:5px;
     padding-right:5px;
@@ -239,7 +258,7 @@ background-color: rgba(0,0,0,0.7);
 
 
 
-<div style="display:none;" class="searcharea">
+<div style="display:none;" class="searcharea pink">
 
     <div style="margin-top:7px;" class="input-group">
         <span data-ng-click="showheader()" class="input-group-addon leftarrow"> 
@@ -258,11 +277,14 @@ background-color: rgba(0,0,0,0.7);
 
 
 
-
-<div class="swiper-container">
+<div style="position:relative;">
+      <a onclick="window.plugins.socialsharing.share('Nathdwara Mart', null, null, 'https://play.google.com/store/apps/details?id=com.nathdwaramart.nathdwaramart&hl=en')" class="sharebtn green" >
+        <i class="fa fa-share-alt"></i>
+    </a>
+    <div class="swiper-container">
 <div class="swiper-wrapper">
 
-    <div ng-if="dynamicimage==false" style="background:#fff;" class="swiper-slide "> 
+   <!-- <div ng-if="dynamicimage==false" style="background:#fff;" class="swiper-slide "> 
       <img style="width:100%; height:inherit"  src="img/36.jpg" alt="Alternate Text" />
 </div>
 
@@ -270,66 +292,51 @@ background-color: rgba(0,0,0,0.7);
 
          <img style="width:100%; height:inherit" src="{{FeaturedImageUrl}}{{_obj.ImagePath}}" data-ng-if="_obj.ImagePath!=null && _obj.ImagePath!=''" imageonload1 />
          <img data-ng-if="_obj.ImagePath==null || _obj.ImagePath==''" src="img/23.jpg" alt="Alternate Text" />
-</div>
+</div>-->
 
-     <!--
+     
 
-     <div style="background:#000;" class="swiper-slide">
-          <img style="width:100%; height:inherit" src="img/50.jpg" alt="Alternate Text" />
+
+     <div style="background:#fff;" class="swiper-slide">
+          <img style="width:100%; height:inherit" src="img/logo.png" alt="Alternate Text" />
     </div>
 
-    <div style="background:red;" class="swiper-slide">
-        <img style="width:100%; height:inherit" src="img/33.jpg" alt="Alternate Text" />
+    <div style="background:#fff;" class="swiper-slide">
+        <img style="width:100%; height:inherit" src="img/101.jpg" alt="Alternate Text" />
     </div>
 
    
 <div style="background:#fff;" class="swiper-slide "> 
-      <img style="width:100%; height:inherit"  src="img/35.jpg" alt="Alternate Text" />
+      <img style="width:100%; height:inherit"  src="img/102.jpg" alt="Alternate Text" />
 </div>
    
    
      <div style="background:#fff;" class="swiper-slide "> 
-      <img style="width:100%; height:inherit"  src="img/45.jpg" alt="Alternate Text" />
-</div>-->
+      <img style="width:100%; height:inherit"  src="img/103.jpg" alt="Alternate Text" />
+</div>
 
 </div>
  
 <div class="swiper-pagination"></div>
+
+  
+
+</div>
 </div>
 
 
 
-<div style="background:#cac6c6; margin-left:0px; margin-right:0px;" class="row">
-    <div style="padding-left:0px; padding-right:0px;" class="col-xs-4">
-         <img style="width:100%; border-right:2px solid #fff" data-ng-click="darshan()" src="img/Darshan.jpg" alt="Alternate Text" />
-    </div>
-     <div style="text-align:center; padding:0px" class="col-xs-4">
-           <img data-ng-click="train()"style="width:100%; border-left:1px solid #fff; border-right:1px solid #fff;" src="img/Train.jpg" alt="Alternate Text" />
-     </div>
-     <div style="padding-right:0px; padding-left:0px; text-align:right" class="col-xs-4">
-           <img style="width:100%; border-left:2px solid #fff" data-ng-click="bus()" src="img/Bus.jpg" alt="Alternate Text" />
-     </div>
-</div>
+
+
 
 <div class="categoryhead">
     <div class="row">
-    <div style="text-align:left; padding-left:5px; padding-right:0px;" class="col-xs-4">
-        <a onclick="window.open('https://web.facebook.com/nathdwaramart');">  <img style="margin-top:5px; height:30px; width:30px;" src="img/facebook.png" alt="Alternate Text" /></a>
-        <a onclick="window.plugins.socialsharing.share('Nathdwara Mart', null, null, 'https://play.google.com/store/apps/details?id=com.NathdwaraMartNew')"><img style="margin-top:5px;" height="32" width="30" src="img/cloud_share-512.png" alt="Alternate Text" /></a>
-       <a onclick="window.open('http://nathdwaramart.com/');">  <img style="margin-top:5px; height:30px; width:30px;" src="img/www.png" alt="Alternate Text" /></a>
-    </div>
+    
 
-
-      <div style="padding-right:5px;" class="col-xs-4">
-          <h5>Looks for</h5>
+      <div style="padding-right:5px;" class="col-xs-12">
+          <h5 style="font-family:cursive;">What you want !</h5>
       </div>
-      <div style="padding-right:7px;" class="col-xs-4">
-          <div class="pull-right">
-                <i style="margin-right:10px;" data-ng-click="showgrid()" class="fa fa-th"></i>
-              <i data-ng-click="showlist()" class="fa fa-th-list"></i>
-              
-          </div>
-      </div>
+      
         </div>
 </div>
 
@@ -386,7 +393,30 @@ background-color: rgba(0,0,0,0.7);
 
 
 <a class="cd-top" onclick="scrollToTop()" title="Go to top"><i class="fa fa-chevron-up"></i></a>
+<a ng-click="OpenmenuModal()" class="menubtn pink waves-effect btn-info btn-floating ng-scope" >
+      +
+    </a>
+
+<div id="myModal2" class="modal bottommenu fade" >
+
+        <div class="modal-body">
+            <ul class="animated slideInUp selectAction">
+                   
+         
+                 <li data-ng-click="showlist()" class="bottomlink ng-scope" ><span>List View</span><a class="waves-effect btn-info btn pink"  data-dismiss="modal"> <i class="fa fa-th-list"></i> </a></li><!-- end ngIf: totalrecords!=0 &&_areZeroRecordsShown==true -->
+                  <li data-ng-click="showgrid()" class="bottomlink ng-scope" ><span>Grid View</span><a class="waves-effect btn-info btn blue"  data-dismiss="modal"> <i class="fa fa-th"></i> </a></li><!-- end ngIf: totalrecords!=0 &&_areZeroRecordsShown==true -->
+                <li class="bottomlink ng-scope" ><span>Flight details</span><a class="waves-effect btn-info btn red"  data-dismiss="modal"> <i class="fa fa-plane"></i> </a></li><!-- end ngIf: totalrecords!=0 &&_areZeroRecordsShown==true -->
+                <li class="bottomlink"><span>Bus details</span><a class=" waves-effect btn-primary btn green" data-dismiss="modal"> <i class="fa fa-bus"></i>  </a></li>
+                <li  class="bottomlink"><span data-dismiss="modal">Train details</span><a  class=" waves-effect btn-primary btn purple" data-dismiss="modal"> <i class="fa fa-train"></i>  </a></li>
+            </ul>
+        </div>
+    </div>
+
 <script>
+
+
+
+
 
     var offset = 50;
     //browser window scroll (in pixels) after which the "back to top" link opacity is reduced
@@ -410,3 +440,92 @@ background-color: rgba(0,0,0,0.7);
         }
     });
 </script>
+
+<style>
+    
+
+
+
+#myModal2 {
+    position: fixed;
+    right: 13px;
+    font-size: 18px;
+    text-align: right;
+    display: none;
+    background: transparent;
+    overflow: hidden;
+}
+
+    #myModal2 span {
+     font-size: 14px;
+    font-family: verdana;
+    margin-right: 7px;
+    background: #fff;
+    /* min-width: 200px; */
+    width: 116px;
+    text-align: -webkit-center;
+    display: inline-block;
+    padding: 2px;
+    box-shadow: -3px 4px 10px #888;
+    }
+
+
+    #myModal2 .modal-body {
+        background: transparent;
+    }
+
+    .selectAction {
+    position: fixed;
+    bottom: 75px;
+    right: 35px;
+}
+
+    .selectAction li {
+    list-style-type: none;
+}
+
+
+    .selectAction .btn {
+    height: 40px;
+    width: 40px;
+    padding: 0px;
+    border-radius: 100%;
+    text-align: center;
+    line-height: 40px;
+    border: transparent;
+    margin-bottom: 5px;
+    color: #fff;
+}
+
+    .menubtn {
+      position: fixed;
+    bottom: 23px;
+    right: 25px;
+   
+    z-index: 13000;
+    color: #fff !important;
+    height: 60px;
+    width: 60px;
+    border-radius: 100%;
+    text-align: center;
+    line-height: 56px;
+    font-size: 35px;
+    cursor: pointer;
+    padding: 0;
+}
+
+    .sharebtn {
+      height: 50px;
+    width: 50px;
+    border-radius: 100%;
+    text-align: center;
+    line-height: 50px;
+    font-size: 21px;
+    display: block;
+    color: #fff !important;
+    position: absolute;
+    z-index: 10;
+    right: 25px;
+    margin-top: 155px;
+    }
+</style>
