--- a/app/views/train.html
+++ b/app/views/train.html
@@ -126,7 +126,7 @@
 
                     <label> From</label>
                     <select class="form-control">
-                        <option value="Mavli">Mavli</option>
+                        <option value="Nathdwara">Nathdwara</option>
                     </select>
                 </div>
             </div>
@@ -175,18 +175,6 @@
 
 </div>
 
-<script>
-    $(document).ready(function () {
-        var allSelectElements = document.getElementsByTagName('select');
-        for (var i = 0; i < allSelectElements.length; i++) {
-            allSelectElements[i].addEventListener('touchstart', function (e) {
-                //This is the important line
-                e.stopPropagation();
-            }, false);
-        }
-    });
-
-</script>
 
 
 
