--- a/app/views/darshan.html
+++ b/app/views/darshan.html
@@ -66,36 +66,28 @@
      .mainloader {
         top:45%;
     }
-   
+     .head {
+        color: #fff;
+    margin-top: -29px;
+    text-align: center;
+    font-family: cursive;
+    font-size:20px;
+    }
 </style>
 
 <div data-ng-if="isload==true || isload=='true'" class="mainloader">
         <img style="width:60px;" src="img/loader.gif" alt="Alternate Text" />
     </div>
 <div>
-    <img style="width:100%; max-height:150px; margin-top:6px;" src="img/shr.jpg" alt="Alternate Text" />
-
+    <img style="width:100%; max-height:170px;" src="img/plane.jpg" alt="Alternate Text" />
+     <p class="head">Find Your target Location</p>
    
 </div>
-<div class="well">
+<div class="well" style="text-align:center">
  
 
 
-    <table class="table table-bordered">
-
-        <tr>
-            <td> DARSHAN</td>
-                 <td>TIME [Open - Close] </td>
-            </tr>
-        <tr data-ng-repeat="obj in DarshanTimings">
-            <td width="40%;" >
-                <p class="darshan"> {{obj.Name}} </p>
-            </td>
-             <td   width="60%">
-                 {{obj.OpenTime}} to  {{obj.CloseTime}}
-             </td>
-        </tr>
-    </table>
+    <h1> Coming soon :) </h1>
  
    
     
