First commit my ratlam
First commit my ratlam

--- a/app/views/around.html
+++ b/app/views/around.html
@@ -66,12 +66,11 @@
         line-height:50px;
     }
 </style>
-  <img style="width:100%; max-height:200px;" src="img/101.jpg" alt="Alternate Text" />
+  <img style="width:100%;" src="img/ratlam.jpg" alt="Alternate Text" />
 <div class="well">
  
-    <h4>Visit places</h4>
-    <small>Distance calculate from bus stand Udiapole</small>
-    <br />
+    <h4>Around Ratlam</h4>
+ 
     <table class="table">
         <thead><tr>
             <th>Place</th>
@@ -82,49 +81,49 @@
         <tbody>
             <tr>
                 <td>
-                   Lake palace
+                    Shrinath ji temple
                 </td>  
                 <td>0.3 KM</td>  
             </tr>
 
              <tr>
                 <td>
-                  City palace
+                   Ganesh Tekri
                 </td>  
                 <td>2.5 KM</td>  
             </tr>
 
              <tr>
                 <td>
-                   Fateh sagar
+                    Lal Bagh
                 </td>  
                 <td>0.5 KM</td>  
             </tr>
 
              <tr>
                 <td>
-                  Sahelio ki bari
+                   Giraj Parikrama
                 </td>  
                 <td>0.4 KM</td>  
             </tr>
 
               <tr>
                 <td>
-                Gulab bagh
+                 Vallabh Ashram
                 </td>  
                 <td>1.5 KM</td>  
             </tr>
 
              <tr>
                 <td>
-            Sajjam garh
+               Shrinath ji Goushala
                 </td>  
                 <td>2.5 KM</td>  
             </tr>
 
              <tr>
                 <td>
-           Dudh talai
+            Girdhar sagar
                 </td>  
                 <td>0.8 KM</td>  
             </tr>
@@ -151,6 +150,170 @@
 
 </div>
 
+
+<div class="well">
+ 
+    <h4>Visit Places</h4>
+ 
+    <table class="table">
+        <thead><tr>
+            <th>Place</th>
+
+             <th>Distance</th>
+        </tr>
+            </thead>
+        <tbody>
+            <tr>
+                <td>
+                  Udaipur
+                </td>  
+                <td>48 KM</td>  
+            </tr>
+
+             <tr>
+                <td>
+                 Ekling Ji
+                </td>  
+                <td>27 KM</td>  
+            </tr>
+
+             <tr>
+                <td>
+                   Sas bahu mandir (Nagda)
+                </td>  
+                <td>32 KM</td>  
+            </tr>
+
+             <tr>
+                <td>
+                  Haldighati
+                </td>  
+                <td>20 KM</td>  
+            </tr>
+
+              <tr>
+                <td>
+               Ghasiyar
+                </td>  
+                <td>50 KM</td>  
+            </tr>
+
+             <tr>
+                <td>
+            Kankroli
+                </td>  
+                <td>18 KM</td>  
+            </tr>
+
+             <tr>
+                <td>
+           Charbhuja
+                </td>  
+                <td>70 KM</td>  
+            </tr>
+
+            
+             <tr>
+                <td>
+           Kumbhalgarh
+                </td>  
+                <td>78 KM</td>  
+            </tr>
+
+            
+             <tr>
+                <td>
+        Parsuram mahadev
+                </td>  
+                <td>95 KM</td>  
+            </tr>
+
+            
+             <tr>
+                <td>
+           Ranakpur
+                </td>  
+                <td>110 KM</td>  
+            </tr>
+
+            
+             <tr>
+                <td>
+           Mount Abu
+                </td>  
+                <td>200 KM</td>  
+            </tr>
+
+            
+             <tr>
+                <td>
+           Ambaji
+                </td>  
+                <td>200 KM</td>  
+            </tr>
+
+            
+             <tr>
+                <td>
+           Shani maharaj
+                </td>  
+                <td>100 KM</td>  
+            </tr>
+
+            
+             <tr>
+                <td>
+           Sanvaliya Ji
+                </td>  
+                <td>110 KM</td>  
+            </tr>
+
+             <tr>
+                <td>
+        Avari mataji
+                </td>  
+                <td>120 KM</td>  
+            </tr>
+
+             <tr>
+                <td>
+         Chittorgarh
+                </td>  
+                <td>110 KM</td>  
+            </tr>
+
+             <tr>
+                <td>
+         Ajmer
+                </td>  
+                <td>235 KM</td>  
+            </tr>
+
+
+               <tr>
+                <td>
+         Pushkar
+                </td>  
+                <td>260 KM</td>  
+            </tr>
+
+            <tr>
+                <td colspan="2">
+
+                  
+
+
+                </td>
+
+
+                  
+                </tr>
+
+        </tbody>
+    </table>
+ 
+
+</div>
 
 
 
