--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -66,35 +66,41 @@
     <h4 style="margin-top:0px;">Contact Us</h4>
  
     <p>
-    Ramdwara, Near H.S. School  </p>
+   80 Feet road, Alkapuri </p>
     <p>
-    Nathdwara, Rajasthan, India </p>
+    Ratlam, MP, India </p>
     <p>
-    9772445552 , 8890638988  </p>
-    <p>Nathdwaramart@gmail.com
-    </p>
+    9640993390 , 8890638988  </p>
+  
 
    
 
     <ul style="margin-top:15px;" class="comments-list">
               <li class="animated bounceInLeft">
-                <img src="img/bhu.jpg" alt="" class="avatar ">
+                <img src="img/anil.jpg" alt="" class="avatar ">
                 <div class="comment-body">
-                  <span class="author uppercase">Bhupesh jangid </span>
-                    <p>Managing Director</p>
-                  <p>9772445552</p>
+                  <span class="author uppercase">Anil Bhatt</span>
+                    <p>Managing Leader</p>
+                  <p>9640993390</p>
+                </div>
+              </li>
+              <li class="nitesh hide">
+                <img src="img/krishna.jpg" alt="" class="avatar ">
+                <div class="comment-body">
+                  <span class="author uppercase">Krishna Jangid</span>
+                    <p>MCA - APP Developer</p>
+                  <p> 8559885552</p>
+                </div>
+              </li>
+              <li class="krishna hide">
+                <img src="img/nn.jpg" alt="" class="avatar ">
+                <div class="comment-body">
+                  <span class="author uppercase">Narayan Sharma</span>
+                    <p>MBA</p>
+                  <p>7896541230</p>
                 </div>
               </li>
             
-              <li class="krishna hide">
-                <img src="img/krishna.jpg" alt="" class="avatar ">
-                <div class="comment-body">
-                  <span class="author uppercase">Krishna Jangid - CEO </span>
-                    <p>MCA - Web Developer</p>
-                  <p>8559885552</p>
-                </div>
-              </li>
-             
             
             </ul>
 
