--- a/app/views/detail.html
+++ b/app/views/detail.html
@@ -319,7 +319,7 @@
 
 
 
-<div style="padding-left:0px; padding-right:0px;" class="well pink">
+<div style="padding-left:0px; padding-right:0px;" class="well red">
     <div class="row">
         <div class="col-xs-4">
 
@@ -376,9 +376,9 @@
 
 
             <p style="font-size:13px;">Owner of <span style="color:brown; font-weight:700;"> {{Currentshop.Name}} </span> Is {{Currentshop.OwnerName}}</p>
-            <p style="font-size:13px;">{{Currentshop.Name}} Is Tech Udaipur <span ng-if="Currentshop.IsVerified==true">Verified</span> <span ng-if="Currentshop.IsVerified==false">Not Verified</span>   </p> 
+            <p style="font-size:13px;">{{Currentshop.Name}} Is N-Mart <span ng-if="Currentshop.IsVerified==true">Verified</span> <span ng-if="Currentshop.IsVerified==false">Not Verified</span>   </p> 
 
-            <table class="table">
+            <table class="table table-bordered">
               
 
                  <tr>
