--- a/app/views/about.html
+++ b/app/views/about.html
@@ -45,7 +45,7 @@
  
  
     <p>
-        Nathdwaramart is a Website and Android app that provides Information about Local Business and Services that is require in Daily Needs.It provides Information about all Government,Public and Private Department.
+        My Ratlam a Android app that provides Information about Local Business and Services that is require in Daily Needs.It provides Information about all Government,Public and Private Department.
     </p>
 
  
