--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -62,26 +62,30 @@
 }
 </style>
 
-<div class="well">
-    <h4 style="margin-top:0px;">Contact Us</h4>
- 
+  <img style="width:100%; max-height:300px;" src="img/rtm.png" alt="" ">
+
+<div style="color:#fff; padding-top:10px; padding-bottom:5px;" class="well red">
+    
     <p>
-   80 Feet road, Alkapuri </p>
+     80 Feet road, Alkapuri </p>
     <p>
     Ratlam, MP, India </p>
     <p>
     9640993390 , 8890638988  </p>
-  
+</div>
 
-   
+<div class="well">
+     
 
-    <ul style="margin-top:15px;" class="comments-list">
+    <ul  class="comments-list">
               <li class="animated bounceInLeft">
                 <img src="img/anil.jpg" alt="" class="avatar ">
                 <div class="comment-body">
                   <span class="author uppercase">Anil Bhatt</span>
-                    <p>Managing Leader</p>
-                  <p>9640993390</p>
+                    <p>PGDABM - Managing Leader</p>
+                    <a href="tel:+919640993390" class="Blondie">
+                        9640993390
+                    </a> 
                 </div>
               </li>
               <li class="nitesh hide">
@@ -89,15 +93,19 @@
                 <div class="comment-body">
                   <span class="author uppercase">Krishna Jangid</span>
                     <p>MCA - APP Developer</p>
-                  <p> 8559885552</p>
+                    <a href="tel:+918559885552" class="Blondie">
+                        9640993390
+                    </a> 
                 </div>
               </li>
               <li class="krishna hide">
-                <img src="img/nn.jpg" alt="" class="avatar ">
+                <img src="img/nanu.png" alt="" class="avatar ">
                 <div class="comment-body">
                   <span class="author uppercase">Narayan Sharma</span>
-                    <p>MBA</p>
-                  <p>7896541230</p>
+                    <p>Msc Nursing</p>
+                    <a href="tel:+917879268534" class="Blondie">
+                        7879268534
+                    </a> 
                 </div>
               </li>
             
