--- a/app/views/shop.html
+++ b/app/views/shop.html
@@ -310,9 +310,7 @@
     </div>
 
 
-
-
-<div style="margin-bottom:0px;" class="searchsec red">
+<div style="margin-bottom:0px;" class="searchsec teal">
     <div class="">
         <input type="text" placeholder="Type to Quick search" class="form-control" data-ng-change="GetShops()" data-ng-model="Searchstring" name="name" value="" />
     </div>
@@ -322,8 +320,8 @@
 
 <ul class=" widget-products">
 
-      <li data-ng-if="totalrecord!=true && totalrecord!='true'" style="padding-bottom:10px; padding-top:10px; background:#a09a9a ; text-align:center;" class="" >
-    <span class="" style="font-family:verdana; text-align:center; background:#a09a9a ; color:#fff; font-size:17px; "> {{categaryname}}</span> 
+      <li data-ng-if="totalrecord!=true && totalrecord!='true'" style="padding-bottom:10px; padding-top:10px; background:#a09a9a ; text-align:center;" class="red" >
+    <span class="" style="font-family:cursive; text-align:center; ; color:#fff; font-size:20px; "> Find Your nearest {{categaryname}}</span> 
 </li>
     <li data-ng-if="totalrecord==true || totalrecord=='true'">
 
@@ -339,7 +337,6 @@
                 </ol>
             </div>
         </div>
-
     
         </li>
 
