--- a/app/views/about.html
+++ b/app/views/about.html
@@ -39,16 +39,15 @@
         border-bottom:transparent;
     }
 </style>
-  <img style="width:100%;" src="img/about.png" alt="Alternate Text" />
+  <img style="width:100%;" src="img/about.jpg" alt="Alternate Text" />
 <div class="well">
-    <h4>About US</h4>
- 
- 
-    <p>
-        My Ratlam a Android app that provides Information about Local Business and Services that is require in Daily Needs.It provides Information about all Government,Public and Private Department.
+     <p>
+     <b> My Ratlam </b> is a Android app that provides Information about Local Business and Services that is require in Daily Needs.It provides Information about all Government,Public and Private Department.
     </p>
 
- 
+   <p>
+     <b> My Ratlam </b> is a Android app that provides Information about Local Business and Services that is require in Daily Needs.It provides Information about all Government,Public and Private Department.
+    </p>
 
 </div>
 
