--- a/app/views/train.html
+++ b/app/views/train.html
@@ -178,7 +178,16 @@
 
 
 
-
+<script>
+    $(document).ready(function () {
+        var allSelectElements = document.getElementsByTagName('select');
+        for (var i = 0; i < allSelectElements.length; i++) {
+            allSelectElements[i].addEventListener('touchstart', function (e) {
+                e.stopPropagation();
+            }, false);
+        }
+    });
+</script>
 
 
 
